HW01 Third Commit

--- a/HW01/NLP_HW01.ipynb
+++ b/HW01/NLP_HW01.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cut time :  0.06783413887023926 s\n",
+      "cut time :  0.05385088920593262 s\n",
       "\n",
-      "\n",
-      "total words count :  5630\n"
+      "total words count :  4527\n"
      ]
     }
    ],
@@ -20,11 +19,18 @@
     "import jieba\n",
     "import jieba.analyse\n",
     "import pandas as pd\n",
+    "import matplotlib.pylab as plt\n",
     "import time\n",
     "\n",
     "\n",
     "doc = open('./hw1-dataset-ez.txt', 'r', encoding = \"utf-8\").read()\n",
-    "#print(doc)\n",
+    "\n",
+    "\n",
+    "tags_list = jieba.analyse.extract_tags(doc, topK = 10, withWeight = True, allowPOS=())\n",
+    "\n",
+    "tags_list.sort(key=lambda x:x[1], reverse=True)\n",
+    "#print(tags_list)\n",
+    "\n",
     "\n",
     "# start time \n",
     "cut_st = time.time()\n",
@@ -33,16 +39,36 @@
     "\n",
     "# end time\n",
     "cut_et = time.time()\n",
-    "print(\"cut time : \", cut_et - cut_st, \"s\\n\")\n",
+    "print(\"cut time : \", cut_et - cut_st, \"s\")\n",
     "\n",
-    "word_freq = {}\n",
+    "# number of each word\n",
+    "word_count = {}\n",
     "for word in words_list:\n",
-    "    word_freq[word] = word_freq.get(word, 0) + 1\n",
+    "    word_count[word] = word_count.get(word, 0) + 1\n",
     "\n",
-    "#print(\"\\nwords frequency : \", word_freq)\n",
+    "# delete the particular character\n",
+    "del_keys = ['\\t', '\\n', '。', '!','！', '?', ',', '？', '\\u3000', ' ', '，', '\\\\', '/']\n",
+    "for del_key in del_keys:\n",
+    "    del word_count[del_key]\n",
+    "    \n",
+    "#print(\"\\nwords count : \", word_count)\n",
     "\n",
-    "total_count = sum(word_freq.values())\n",
-    "print(\"\\ntotal words count : \", total_count)\n"
+    "\n",
+    "total_count = sum(word_count.values())\n",
+    "print(\"\\ntotal words count : \", total_count)\n",
+    "\n",
+    "# frequency of each word\n",
+    "word_freq = word_count\n",
+    "for word in word_freq:\n",
+    "    word_freq[word] /= total_count\n",
+    "    \n",
+    "#print(\"\\nwords freq : \", word_freq)\n",
+    "\n",
+    "items = list(word_freq.items())\n",
+    "items.sort(key=lambda x:x[1], reverse=True) \n",
+    "#print(items)\n",
+    "\n",
+    "\n"
    ]
   },
   {
