--- a/HW01/NLP_HW01.ipynb
+++ b/HW01/NLP_HW01.ipynb
@@ -92,7 +92,10 @@
     "\n",
     "\n",
     "df_weight = pd.DataFrame(tags_list)\n",
-    "df_weight.head(10).plot(kind = 'bar', title = \"Weight\")"
+    "df_weight.head(10).plot(kind = 'bar', title = \"Weight\")\n",
+    "\n",
+    "\n",
+    "df_freq = pd.DataFrame(items)\n"
    ]
   },
   {
