HW01 Nth commit

--- a/HW01/NLP_HW01.ipynb
+++ b/HW01/NLP_HW01.ipynb
@@ -95,7 +95,8 @@
     "df_weight.head(10).plot(kind = 'bar', title = \"Weight\")\n",
     "\n",
     "\n",
-    "df_freq = pd.DataFrame(items)\n"
+    "df_freq = pd.DataFrame(items)\n",
+    "df_freq.head(10).plot(kind = 'bar', title = \"Frequency\")"
    ]
   },
   {
