--- a/HW04/HW04_v2.ipynb
+++ b/HW04/HW04_v2.ipynb
@@ -161,30 +161,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D://NLP/wiki_zh_2019/wiki_zh/AA/wiki_00\n",
-      "D://NLP/wiki_zh_2019/wiki_zh/AA/wiki_01\n",
-      "D://NLP/wiki_zh_2019/wiki_zh/AA/wiki_02\n",
-      "D://NLP/wiki_zh_2019/wiki_zh/AA/wiki_03\n",
-      "D://NLP/wiki_zh_2019/wiki_zh/AA/wiki_04\n",
-      "D://NLP/wiki_zh_2019/wiki_zh/AB/wiki_00\n",
-      "D://NLP/wiki_zh_2019/wiki_zh/AB/wiki_01\n",
-      "D://NLP/wiki_zh_2019/wiki_zh/AB/wiki_02\n",
-      "D://NLP/wiki_zh_2019/wiki_zh/AB/wiki_03\n",
-      "D://NLP/wiki_zh_2019/wiki_zh/AB/wiki_04\n",
-      "[('邏輯', 0.9596030116081238), ('理論', 0.9572277069091797), ('分析', 0.95585036277771), ('學中', 0.9398724436759949), ('物理', 0.9390361309051514), ('純數學', 0.9356193542480469), ('聲學', 0.9312252402305603), ('知識', 0.9310800433158875), ('語言學', 0.9308790564537048), ('模型', 0.9295468330383301)]\n"
+      "AA/\n",
+      "AB/\n",
+      "total time:  63.54530382156372  s\n",
+      "\n",
+      "[('邏輯', 0.9579820036888123), ('分析', 0.9552180767059326), ('理論', 0.9497487545013428), ('語義學', 0.9445591568946838), ('物理', 0.9444211721420288), ('語言學', 0.9374140501022339), ('性質', 0.9371500611305237), ('數學理論', 0.9365296363830566), ('模型', 0.9364597201347351), ('數論', 0.9348641037940979), ('數學家', 0.933047890663147), ('歸納', 0.9316354393959045), ('機科學', 0.9295642971992493), ('邏輯學', 0.9279452562332153), ('學中', 0.9254655838012695), ('力學', 0.9242505431175232), ('形而上', 0.9230303764343262), ('生理', 0.9217222332954407), ('知識', 0.9197220802307129), ('純數學', 0.9188389182090759)]\n"
      ]
     }
    ],
    "source": [
-    "#file_prefix = ['AA/', 'AB/', 'AC/', 'AD/', 'AE/', 'AF/', 'AG/', 'AH/', 'AI/', 'AJ/', 'AK/', 'AL/', 'AM/']\n",
-    "file_prefix = ['AA/', 'AB/']\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "file_prefix = ['AA/', 'AB/', 'AC/', 'AD/', 'AE/', 'AF/', 'AG/', 'AH/', 'AI/', 'AJ/']\n",
+    "#file_prefix = ['AK/', 'AL/', 'AM/']\n",
     "\n",
     "\n",
     "v2_id_list    = []\n",
@@ -193,11 +190,15 @@
     "v2_text_list  = []\n",
     "\n",
     "\n",
+    "start_t = time.time()\n",
+    "\n",
     "for prefix in file_prefix:\n",
-    "    for i in range(0, 5):\n",
-    "    #for i in range(0, 100):\n",
+    "    print(prefix)\n",
+    "    \n",
+    "    #for i in range(0, 5):\n",
+    "    for i in range(0, 100):\n",
     "        fn = 'D://NLP/wiki_zh_2019/wiki_zh/' + prefix + 'wiki_' + str(\"{:02}\".format(i))\n",
-    "        print(fn)\n",
+    "        #print(fn)\n",
     "        \n",
     "        fd = open(fn, \"r\", encoding=\"utf-8\")\n",
     "        \n",
@@ -231,7 +232,11 @@
     "\n",
     "v2_test_model = Word2Vec(v2_cut_text_list)\n",
     "\n",
-    "similar_word = v2_test_model.wv.most_similar('數學', topn=10)\n",
+    "end_t = time.time()\n",
+    "\n",
+    "similar_word = v2_test_model.wv.most_similar('數學', topn=20)\n",
+    "\n",
+    "print(\"total time: \", end_t - start_t, \" s\\n\")\n",
     "print(similar_word)"
    ]
   },
