--- a/HW05/NLP_HW05.ipynb
+++ b/HW05/NLP_HW05.ipynb
@@ -2,81 +2,139 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
    "source": [
-    "from keras.models import Model\n",
-    "from keras.layers import Input, LSTM, Dense\n",
-    "\n",
-    "import numpy as np\n",
+    "from keras.models import Model\r\n",
+    "from keras.layers import Input, LSTM, Dense\r\n",
+    "\r\n",
+    "import numpy as np\r\n",
     "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   ],
    "outputs": [],
-   "source": [
-    "batch_size  = 64 \n",
-    "epochs      = 100\n",
-    "latent_dim  = 256\n",
-    "num_samples = 10000"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 37,
+   "source": [
+    "batch_size  = 32\r\n",
+    "epochs      = 50\r\n",
+    "latent_dim  = 128"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "source": [
+    "# Get training/testing data \r\n",
+    "\r\n",
+    "filepath = 'D://NLP/translation2019zh/translation2019zh_train.json'\r\n",
+    "\r\n",
+    "\r\n",
+    "input_texts  = []\r\n",
+    "target_texts = []\r\n",
+    "\r\n",
+    "input_characters  = set()\r\n",
+    "target_characters = set()\r\n",
+    "\r\n",
+    "\r\n",
+    "fd = open(filepath, 'r', encoding='utf-8')\r\n",
+    "\r\n",
+    "i = 0\r\n",
+    "lines = fd.readlines()\r\n",
+    "\r\n",
+    "for line in lines:\r\n",
+    "    i += 1\r\n",
+    "    if i == 512:\r\n",
+    "        break\r\n",
+    "    \r\n",
+    "    line = line.strip('{').strip('}\\n')\r\n",
+    "    \r\n",
+    "    input_text   = line.split('\"english\": ')[1].split(', \"chinese\": ')[0].strip('\"')\r\n",
+    "    target_text  = line.split(', \"chinese\": ')[1].strip('\"')\r\n",
+    "    target_text  = '\\t' + target_text  + '\\n'\r\n",
+    "    \r\n",
+    "    input_texts.append(input_text)\r\n",
+    "    target_texts.append(target_text)\r\n",
+    "    \r\n",
+    "    \r\n",
+    "    for char in input_text:\r\n",
+    "        if char not in input_characters:\r\n",
+    "            input_characters.add(char)\r\n",
+    "    \r\n",
+    "    for char in target_text:\r\n",
+    "        if char not in target_characters:\r\n",
+    "            target_characters.add(char)\r\n",
+    "            \r\n",
+    "# 字典排序            \r\n",
+    "input_characters  = sorted(list(input_characters))\r\n",
+    "target_characters = sorted(list(target_characters))\r\n",
+    "num_encoder_tokens = len(input_characters)\r\n",
+    "num_decoder_tokens = len(target_characters)\r\n",
+    "\r\n",
+    "# 計算編碼器、解碼器的最大長度\r\n",
+    "max_encoder_seq_length = max([len(txt) for txt in input_texts])\r\n",
+    "max_decoder_seq_length = max([len(txt) for txt in target_texts])\r\n",
+    "\r\n",
+    "print('Number of samples:', len(input_texts))\r\n",
+    "print('Number of unique input tokens:', num_encoder_tokens)\r\n",
+    "print('Number of unique output tokens:', num_decoder_tokens)\r\n",
+    "print('Max sequence length for inputs:', max_encoder_seq_length)\r\n",
+    "print('Max sequence length for outputs:', max_decoder_seq_length)\r\n",
+    "\r\n",
+    "# 以dict儲存字典單字及序號\r\n",
+    "input_token_index = dict(\r\n",
+    "    [(char, i) for i, char in enumerate(input_characters)])\r\n",
+    "target_token_index = dict(\r\n",
+    "    [(char, i) for i, char in enumerate(target_characters)])\r\n",
+    "\r\n",
+    "# 設定編碼器、解碼器input起始值(均為0矩陣)\r\n",
+    "encoder_input_data = np.zeros(\r\n",
+    "    (len(input_texts), max_encoder_seq_length, num_encoder_tokens),\r\n",
+    "    dtype='float32')\r\n",
+    "decoder_input_data = np.zeros(\r\n",
+    "    (len(input_texts), max_decoder_seq_length, num_decoder_tokens),\r\n",
+    "    dtype='float32')\r\n",
+    "decoder_target_data = np.zeros(\r\n",
+    "    (len(input_texts), max_decoder_seq_length, num_decoder_tokens),\r\n",
+    "    dtype='float32')\r\n",
+    "\r\n",
+    "\r\n",
+    "# 設定 encoder_input、decoder_input對應的順序    \r\n",
+    "for i, (input_text, target_text) in enumerate(zip(input_texts, target_texts)):\r\n",
+    "    for t, char in enumerate(input_text):\r\n",
+    "        encoder_input_data[i, t, input_token_index[char]] = 1.\r\n",
+    "\r\n",
+    "    for t, char in enumerate(target_text):\r\n",
+    "        decoder_input_data[i, t, target_token_index[char]] = 1.\r\n",
+    "        if t > 0:\r\n",
+    "            # decoder_target_data will be ahead by one timestep\r\n",
+    "            # and will not include the start character.\r\n",
+    "            decoder_target_data[i, t - 1, target_token_index[char]] = 1."
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "He had a cold and spoke with a slight snuffle. \n",
-      "\n",
-      "他感冒了， 说话有点齉鼻儿。 \n",
-      "\n"
+      "Number of samples: 511\n",
+      "Number of unique input tokens: 126\n",
+      "Number of unique output tokens: 2002\n",
+      "Max sequence length for inputs: 232\n",
+      "Max sequence length for outputs: 122\n"
      ]
     }
    ],
-   "source": [
-    "filepath = 'D://NLP/translation2019zh/translation2019zh_valid.json'\n",
-    "\n",
-    "\n",
-    "input_texts  = []\n",
-    "target_texts = []\n",
-    "\n",
-    "input_characters  = set()\n",
-    "target_characters = set()\n",
-    "\n",
-    "\n",
-    "fd = open(filepath, 'r', encoding='utf-8')\n",
-    "\n",
-    "lines = fd.readlines()\n",
-    "for line in lines:\n",
-    "    line = line.strip('{').strip('}\\n')\n",
-    "    \n",
-    "    en_text = line.split('\"english\": ')[1].split(', \"chinese\": ')[0].strip('\"')\n",
-    "    ch_text = line.split(', \"chinese\": ')[1].strip('\"')\n",
-    "\n",
-    "    input_texts.append(str(en_text))\n",
-    "    target_texts.append(str(ch_text))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(en_text, \"\\n\")\n",
-    "print(ch_text, \"\\n\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
