--- a/HW05/NLP_HW05.ipynb
+++ b/HW05/NLP_HW05.ipynb
@@ -3,36 +3,116 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from keras.models import Model\n",
-    "from keras.layers import Input, LSTM, Dense\n",
-    "from keras import optimizers\n",
-    "\n",
-    "import numpy as np\n",
+    "from keras.models import Model\r\n",
+    "from keras.layers import Input, LSTM, Dense\r\n",
+    "from keras import optimizers\r\n",
+    "\r\n",
+    "import numpy as np\r\n",
     "import json"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "batch_size  = 64\n",
-    "epochs      = 100\n",
+    "batch_size  = 64\r\n",
+    "epochs      = 100\r\n",
     "latent_dim  = 256"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "source": [
+    "\r\n",
+    "filepath = 'D://NLP/translation2019zh/translation2019zh_valid.json'\r\n",
+    "\r\n",
+    "\r\n",
+    "input_texts  = []\r\n",
+    "target_texts = []\r\n",
+    "\r\n",
+    "input_characters  = set()\r\n",
+    "target_characters = set()\r\n",
+    "\r\n",
+    "\r\n",
+    "fd = open(filepath, 'r', encoding='utf-8')\r\n",
+    "\r\n",
+    "i = 0\r\n",
+    "lines = fd.readlines()\r\n",
+    "\r\n",
+    "for line in lines:\r\n",
+    "    i += 1\r\n",
+    "    if i == 2048:\r\n",
+    "        break\r\n",
+    "    \r\n",
+    "    line = line.strip('{').strip('}\\n')\r\n",
+    "    \r\n",
+    "    input_text   = line.split('\"english\": ')[1].split(', \"chinese\": ')[0].strip('\"')\r\n",
+    "    target_text  = line.split(', \"chinese\": ')[1].strip('\"')\r\n",
+    "    \r\n",
+    "    \r\n",
+    "    target_text  = '\\t' + target_text\r\n",
+    "    \r\n",
+    "    input_texts.append(input_text)\r\n",
+    "    target_texts.append(target_text)\r\n",
+    "    \r\n",
+    "    \r\n",
+    "    for char in input_text:\r\n",
+    "        if char not in input_characters:\r\n",
+    "            input_characters.add(char)\r\n",
+    "    \r\n",
+    "    for char in target_text:\r\n",
+    "        if char not in target_characters:\r\n",
+    "            target_characters.add(char)\r\n",
+    "            \r\n",
+    "input_characters  = sorted(list(input_characters))\r\n",
+    "target_characters = sorted(list(target_characters))\r\n",
+    "num_encoder_tokens = len(input_characters)\r\n",
+    "num_decoder_tokens = len(target_characters)\r\n",
+    "\r\n",
+    "max_encoder_seq_length = max([len(txt) for txt in input_texts])\r\n",
+    "max_decoder_seq_length = max([len(txt) for txt in target_texts])\r\n",
+    "\r\n",
+    "print('Number of samples:', len(input_texts))\r\n",
+    "print('Number of unique input tokens:', num_encoder_tokens)\r\n",
+    "print('Number of unique output tokens:', num_decoder_tokens)\r\n",
+    "print('Max sequence length for inputs:', max_encoder_seq_length)\r\n",
+    "print('Max sequence length for outputs:', max_decoder_seq_length)\r\n",
+    "\r\n",
+    "input_token_index = dict(\r\n",
+    "    [(char, i) for i, char in enumerate(input_characters)])\r\n",
+    "target_token_index = dict(\r\n",
+    "    [(char, i) for i, char in enumerate(target_characters)])\r\n",
+    "\r\n",
+    "encoder_input_data = np.zeros(\r\n",
+    "    (len(input_texts), max_encoder_seq_length, num_encoder_tokens),\r\n",
+    "    dtype='float32')\r\n",
+    "decoder_input_data = np.zeros(\r\n",
+    "    (len(input_texts), max_decoder_seq_length, num_decoder_tokens),\r\n",
+    "    dtype='float32')\r\n",
+    "decoder_target_data = np.zeros(\r\n",
+    "    (len(input_texts), max_decoder_seq_length, num_decoder_tokens),\r\n",
+    "    dtype='float32')\r\n",
+    "\r\n",
+    "\r\n",
+    "for i, (input_text, target_text) in enumerate(zip(input_texts, target_texts)):\r\n",
+    "    for t, char in enumerate(input_text):\r\n",
+    "        encoder_input_data[i, t, input_token_index[char]] = 1.\r\n",
+    "\r\n",
+    "    for t, char in enumerate(target_text):\r\n",
+    "        decoder_input_data[i, t, target_token_index[char]] = 1.\r\n",
+    "        if t > 0:\r\n",
+    "            decoder_target_data[i, t - 1, target_token_index[char]] = 1."
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Number of samples: 2047\n",
       "Number of unique input tokens: 161\n",
@@ -42,104 +122,38 @@
      ]
     }
    ],
-   "source": [
-    "# Get training/testing data \n",
-    "\n",
-    "filepath = 'D://NLP/translation2019zh/translation2019zh_valid.json'\n",
-    "\n",
-    "\n",
-    "input_texts  = []\n",
-    "target_texts = []\n",
-    "\n",
-    "input_characters  = set()\n",
-    "target_characters = set()\n",
-    "\n",
-    "\n",
-    "fd = open(filepath, 'r', encoding='utf-8')\n",
-    "\n",
-    "i = 0\n",
-    "lines = fd.readlines()\n",
-    "\n",
-    "for line in lines:\n",
-    "    i += 1\n",
-    "    if i == 2048:\n",
-    "        break\n",
-    "    \n",
-    "    line = line.strip('{').strip('}\\n')\n",
-    "    \n",
-    "    input_text   = line.split('\"english\": ')[1].split(', \"chinese\": ')[0].strip('\"')\n",
-    "    target_text  = line.split(', \"chinese\": ')[1].strip('\"')\n",
-    "    \n",
-    "    #print(input_text)\n",
-    "    #print(target_text)\n",
-    "    \n",
-    "    target_text  = '\\t' + target_text\n",
-    "    \n",
-    "    input_texts.append(input_text)\n",
-    "    target_texts.append(target_text)\n",
-    "    \n",
-    "    \n",
-    "    for char in input_text:\n",
-    "        if char not in input_characters:\n",
-    "            input_characters.add(char)\n",
-    "    \n",
-    "    for char in target_text:\n",
-    "        if char not in target_characters:\n",
-    "            target_characters.add(char)\n",
-    "            \n",
-    "# 字典排序            \n",
-    "input_characters  = sorted(list(input_characters))\n",
-    "target_characters = sorted(list(target_characters))\n",
-    "num_encoder_tokens = len(input_characters)\n",
-    "num_decoder_tokens = len(target_characters)\n",
-    "\n",
-    "# 計算編碼器、解碼器的最大長度\n",
-    "max_encoder_seq_length = max([len(txt) for txt in input_texts])\n",
-    "max_decoder_seq_length = max([len(txt) for txt in target_texts])\n",
-    "\n",
-    "print('Number of samples:', len(input_texts))\n",
-    "print('Number of unique input tokens:', num_encoder_tokens)\n",
-    "print('Number of unique output tokens:', num_decoder_tokens)\n",
-    "print('Max sequence length for inputs:', max_encoder_seq_length)\n",
-    "print('Max sequence length for outputs:', max_decoder_seq_length)\n",
-    "\n",
-    "# 以dict儲存字典單字及序號\n",
-    "input_token_index = dict(\n",
-    "    [(char, i) for i, char in enumerate(input_characters)])\n",
-    "target_token_index = dict(\n",
-    "    [(char, i) for i, char in enumerate(target_characters)])\n",
-    "\n",
-    "# 設定編碼器、解碼器input起始值(均為0矩陣)\n",
-    "encoder_input_data = np.zeros(\n",
-    "    (len(input_texts), max_encoder_seq_length, num_encoder_tokens),\n",
-    "    dtype='float32')\n",
-    "decoder_input_data = np.zeros(\n",
-    "    (len(input_texts), max_decoder_seq_length, num_decoder_tokens),\n",
-    "    dtype='float32')\n",
-    "decoder_target_data = np.zeros(\n",
-    "    (len(input_texts), max_decoder_seq_length, num_decoder_tokens),\n",
-    "    dtype='float32')\n",
-    "\n",
-    "\n",
-    "# 設定 encoder_input、decoder_input對應的順序    \n",
-    "for i, (input_text, target_text) in enumerate(zip(input_texts, target_texts)):\n",
-    "    for t, char in enumerate(input_text):\n",
-    "        encoder_input_data[i, t, input_token_index[char]] = 1.\n",
-    "\n",
-    "    for t, char in enumerate(target_text):\n",
-    "        decoder_input_data[i, t, target_token_index[char]] = 1.\n",
-    "        if t > 0:\n",
-    "            decoder_target_data[i, t - 1, target_token_index[char]] = 1."
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "source": [
+    "encoder_inputs = Input(shape=(None, num_encoder_tokens))\r\n",
+    "encoder = LSTM(latent_dim, return_state=True)\r\n",
+    "encoder_outputs, state_h, state_c = encoder(encoder_inputs)\r\n",
+    "encoder_states = [state_h, state_c]\r\n",
+    "\r\n",
+    "decoder_inputs = Input(shape=(None, num_decoder_tokens))\r\n",
+    "decoder_lstm = LSTM(latent_dim, return_sequences=True, return_state=True)\r\n",
+    "decoder_outputs, _, _ = decoder_lstm(decoder_inputs,\r\n",
+    "                                     initial_state=encoder_states)\r\n",
+    "decoder_dense = Dense(num_decoder_tokens, activation='softmax')\r\n",
+    "decoder_outputs = decoder_dense(decoder_outputs)\r\n",
+    "\r\n",
+    "model = Model([encoder_inputs, decoder_inputs], decoder_outputs)\r\n",
+    "\r\n",
+    "model.compile(optimizer='rmsprop', loss='categorical_crossentropy')\r\n",
+    "model.fit([encoder_input_data, decoder_input_data], decoder_target_data,\r\n",
+    "          batch_size=batch_size,\r\n",
+    "          epochs=epochs,\r\n",
+    "          validation_split=0.2)\r\n",
+    "          \r\n",
+    "          "
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Epoch 1/100\n",
       "26/26 [==============================] - 96s 3s/step - loss: 1.4732 - val_loss: 1.3672\n",
@@ -308,8 +322,8 @@
      ]
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Epoch 83/100\n",
       "26/26 [==============================] - 92s 4s/step - loss: 1.3948 - val_loss: 1.3499\n",
@@ -350,57 +364,84 @@
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<keras.callbacks.History at 0x157e863c888>"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
-   "source": [
-    "# 建立 encoder LSTM 隱藏層\n",
-    "encoder_inputs = Input(shape=(None, num_encoder_tokens))\n",
-    "encoder = LSTM(latent_dim, return_state=True)\n",
-    "encoder_outputs, state_h, state_c = encoder(encoder_inputs)\n",
-    "# 捨棄 output，只保留記憶狀態 h 及 c\n",
-    "encoder_states = [state_h, state_c]\n",
-    "\n",
-    "# 建立 decoder LSTM 隱藏層\n",
-    "decoder_inputs = Input(shape=(None, num_decoder_tokens))\n",
-    "# We set up our decoder to return full output sequences,\n",
-    "# decoder 記憶狀態不會在訓練過程使用，只會在推論(Inference)使用\n",
-    "decoder_lstm = LSTM(latent_dim, return_sequences=True, return_state=True)\n",
-    "decoder_outputs, _, _ = decoder_lstm(decoder_inputs,\n",
-    "                                     initial_state=encoder_states)\n",
-    "decoder_dense = Dense(num_decoder_tokens, activation='softmax')\n",
-    "decoder_outputs = decoder_dense(decoder_outputs)\n",
-    "\n",
-    "# 定義模型，由 encoder_input_data 及 decoder_input_data 轉換為 decoder_target_data \n",
-    "model = Model([encoder_inputs, decoder_inputs], decoder_outputs)\n",
-    "\n",
-    "# 訓練\n",
-    "model.compile(optimizer='rmsprop', loss='categorical_crossentropy')\n",
-    "model.fit([encoder_input_data, decoder_input_data], decoder_target_data,\n",
-    "          batch_size=batch_size,\n",
-    "          epochs=epochs,\n",
-    "          validation_split=0.2)\n",
-    "          \n",
-    "          \n",
-    "# 儲存模型及結果\n",
-    "#model.save('s2s.h5')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "source": [
+    "encoder_model = Model(encoder_inputs, encoder_states)\r\n",
+    "\r\n",
+    "decoder_state_input_h = Input(shape=(latent_dim,))\r\n",
+    "decoder_state_input_c = Input(shape=(latent_dim,))\r\n",
+    "decoder_states_inputs = [decoder_state_input_h, decoder_state_input_c]\r\n",
+    "\r\n",
+    "decoder_outputs, state_h, state_c = decoder_lstm(\r\n",
+    "    decoder_inputs, initial_state=decoder_states_inputs)\r\n",
+    "    \r\n",
+    "decoder_states = [state_h, state_c]\r\n",
+    "decoder_outputs = decoder_dense(decoder_outputs)\r\n",
+    "decoder_model = Model(\r\n",
+    "    [decoder_inputs] + decoder_states_inputs,\r\n",
+    "    [decoder_outputs] + decoder_states)\r\n",
+    "\r\n",
+    "reverse_input_char_index = dict(\r\n",
+    "    (i, char) for char, i in input_token_index.items())\r\n",
+    "reverse_target_char_index = dict(\r\n",
+    "    (i, char) for char, i in target_token_index.items())\r\n",
+    "\r\n",
+    "\r\n",
+    "def decode_sequence(input_seq):\r\n",
+    "    states_value = encoder_model.predict(input_seq)\r\n",
+    "\r\n",
+    "    target_seq = np.zeros((1, 1, num_decoder_tokens))\r\n",
+    "    target_seq[0, 0, target_token_index['\\t']] = 1.\r\n",
+    "\r\n",
+    "    stop_condition = False\r\n",
+    "    decoded_sentence = ''\r\n",
+    "    while not stop_condition:\r\n",
+    "        output_tokens, h, c = decoder_model.predict(\r\n",
+    "            [target_seq] + states_value)\r\n",
+    "\r\n",
+    "        sampled_token_index = np.argmax(output_tokens[0, -1, :])\r\n",
+    "        sampled_char = reverse_target_char_index[sampled_token_index]\r\n",
+    "        decoded_sentence += sampled_char\r\n",
+    "\r\n",
+    "        if (sampled_char == '\\n' or\r\n",
+    "           len(decoded_sentence) > max_decoder_seq_length):\r\n",
+    "            stop_condition = True\r\n",
+    "\r\n",
+    "        target_seq = np.zeros((1, 1, num_decoder_tokens))\r\n",
+    "        target_seq[0, 0, sampled_token_index] = 1.\r\n",
+    "\r\n",
+    "        states_value = [h, c]\r\n",
+    "\r\n",
+    "    return decoded_sentence\r\n",
+    "\r\n",
+    "for seq_index in range(2):\r\n",
+    "    input_seq = encoder_input_data[seq_index: seq_index + 1]\r\n",
+    "    decoded_sentence = decode_sequence(input_seq)\r\n",
+    "    print('*')\r\n",
+    "    print('Input sentence:', input_texts[seq_index])\r\n",
+    "    try:\r\n",
+    "        print('Decoded sentence:', decoded_sentence)\r\n",
+    "    except:\r\n",
+    "        print('Decoded sentence:', decoded_sentence.encode('ascii', 'replace'))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "*\n",
       "Input sentence: Slowly and not without struggle, America began to listen.\n",
@@ -411,102 +452,23 @@
      ]
     }
    ],
-   "source": [
-    "# 定義編碼器取樣模型\n",
-    "encoder_model = Model(encoder_inputs, encoder_states)\n",
-    "\n",
-    "# 定義解碼器的input\n",
-    "decoder_state_input_h = Input(shape=(latent_dim,))\n",
-    "decoder_state_input_c = Input(shape=(latent_dim,))\n",
-    "decoder_states_inputs = [decoder_state_input_h, decoder_state_input_c]\n",
-    "\n",
-    "# 定義解碼器 LSTM 模型\n",
-    "decoder_outputs, state_h, state_c = decoder_lstm(\n",
-    "    decoder_inputs, initial_state=decoder_states_inputs)\n",
-    "    \n",
-    "# 以編碼器的記憶狀態 h 及 c 為解碼器的記憶狀態  \n",
-    "decoder_states = [state_h, state_c]\n",
-    "decoder_outputs = decoder_dense(decoder_outputs)\n",
-    "decoder_model = Model(\n",
-    "    [decoder_inputs] + decoder_states_inputs,\n",
-    "    [decoder_outputs] + decoder_states)\n",
-    "\n",
-    "# 建立反向的 dict，才能透過查詢將數值轉回文字\n",
-    "reverse_input_char_index = dict(\n",
-    "    (i, char) for char, i in input_token_index.items())\n",
-    "reverse_target_char_index = dict(\n",
-    "    (i, char) for char, i in target_token_index.items())\n",
-    "\n",
-    "\n",
-    "# 模型預測，並取得翻譯結果(中文)    \n",
-    "def decode_sequence(input_seq):\n",
-    "    # Encode the input as state vectors.\n",
-    "    states_value = encoder_model.predict(input_seq)\n",
-    "\n",
-    "    # Generate empty target sequence of length 1.\n",
-    "    target_seq = np.zeros((1, 1, num_decoder_tokens))\n",
-    "    # Populate the first character of target sequence with the start character.\n",
-    "    target_seq[0, 0, target_token_index['\\t']] = 1.\n",
-    "\n",
-    "    # Sampling loop for a batch of sequences\n",
-    "    # (to simplify, here we assume a batch of size 1).\n",
-    "    stop_condition = False\n",
-    "    decoded_sentence = ''\n",
-    "    while not stop_condition:\n",
-    "        output_tokens, h, c = decoder_model.predict(\n",
-    "            [target_seq] + states_value)\n",
-    "\n",
-    "        # Sample a token\n",
-    "        sampled_token_index = np.argmax(output_tokens[0, -1, :])\n",
-    "        sampled_char = reverse_target_char_index[sampled_token_index]\n",
-    "        decoded_sentence += sampled_char\n",
-    "\n",
-    "        # Exit condition: either hit max length\n",
-    "        # or find stop character.\n",
-    "        if (sampled_char == '\\n' or\n",
-    "           len(decoded_sentence) > max_decoder_seq_length):\n",
-    "            stop_condition = True\n",
-    "\n",
-    "        # Update the target sequence (of length 1).\n",
-    "        target_seq = np.zeros((1, 1, num_decoder_tokens))\n",
-    "        target_seq[0, 0, sampled_token_index] = 1.\n",
-    "\n",
-    "        # Update states\n",
-    "        states_value = [h, c]\n",
-    "\n",
-    "    return decoded_sentence\n",
-    "\n",
-    "# 測試100次\n",
-    "for seq_index in range(2):\n",
-    "    # Take one sequence (part of the training test)\n",
-    "    # for trying out decoding.\n",
-    "    input_seq = encoder_input_data[seq_index: seq_index + 1]\n",
-    "    decoded_sentence = decode_sequence(input_seq)\n",
-    "    print('*')\n",
-    "    print('Input sentence:', input_texts[seq_index])\n",
-    "    try:\n",
-    "        print('Decoded sentence:', decoded_sentence)\n",
-    "    except:\n",
-    "        # 出現亂碼，以?取代\n",
-    "        print('Decoded sentence:', decoded_sentence.encode('ascii', 'replace'))\n",
-    "        #print(\"error:\", sys.exc_info()[0])"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "model.save('s2s.h5')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
