--- a/PROJECT/NLP_FinalProject.ipynb
+++ b/PROJECT/NLP_FinalProject.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "import nltk\n",
     "import string\n",
-    "import pandas as pd"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -407,6 +413,320 @@
    "outputs": [],
    "source": [
     "train_csv.drop(columns = ['id'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\User\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#remove stop words\n",
+    "nltk.download('stopwords')\n",
+    "stopwords = nltk.corpus.stopwords.words('english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_stopwords(text):\n",
+    "    output = [i for i in text if i not in stopwords]\n",
+    "    return output\n",
+    "\n",
+    "train_csv['text'] = train_csv['text'].apply(lambda x:remove_stopwords(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "porter_stemmer = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stemming(text):\n",
+    "    stem_text = [porter_stemmer.stem(word) for word in text]\n",
+    "    return stem_text\n",
+    "\n",
+    "train_csv['text'] = train_csv['text'].apply(lambda x: stemming(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wordnet_lemmatizer = WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lemmatizer(text):\n",
+    "    lemm_text = [wordnet_lemmatizer.lemmatize(word) for word in text]\n",
+    "    return lemm_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\User\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\wordnet.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('wordnet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "82531\n"
+     ]
+    }
+   ],
+   "source": [
+    "#['a','b'] + ['c'] = ['a','b','c']\n",
+    "\n",
+    "vocab = []\n",
+    "\n",
+    "for i in train_csv['text'].values:\n",
+    "    vocab = vocab + i\n",
+    "\n",
+    "print(len(vocab))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19822 <class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_vocab = set(vocab)\n",
+    "vocab = list(set_vocab)\n",
+    "\n",
+    "print(len(vocab), type(vocab))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        our deed reason earthquak may allah forgiv us\n",
+       "1                 forest fire near La rong sask canada\n",
+       "2    all resid ask shelter place notifi offic No ev...\n",
+       "3    13000 peopl receiv wildfir evacu order california\n",
+       "4    just got sent photo rubi alaska smoke wildfir ...\n",
+       "Name: text_strings, dtype: object"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_csv['text_strings'] = train_csv['text'].apply(lambda x: ' '.join([str(elem) for elem in x]))\n",
+    "train_csv['text_strings'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7613,)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(train_csv['text_strings'])\n",
+    "\n",
+    "x_train = X.toarray()\n",
+    "x_train = np.array(x_train)\n",
+    "\n",
+    "y_train = train_csv['target']\n",
+    "\n",
+    "x_train.shape\n",
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9630894522527256"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_test = LogisticRegression(random_state=42)\n",
+    "model_test.fit(x_train,y_train)\n",
+    "\n",
+    "model_predict = model_test.predict(x_train)\n",
+    "accuracy_score(y_train, model_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_csv.fillna('', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_csv.drop(columns=['id','keyword','location'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_csv['text'] = test_csv['text'].apply(lambda x:remove_punctuation(x))\n",
+    "test_csv['text'] = test_csv['text'].apply(lambda x: tokenize(x))\n",
+    "test_csv['text'] = test_csv['text'].apply(lambda x:remove_stopwords(x))\n",
+    "test_csv['text'] = test_csv['text'].apply(lambda x: stemming(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_csv['text_strings'] = test_csv['text'].apply(lambda x: ' '.join([str(elem) for elem in x]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, ..., 1, 1, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test = vectorizer.transform(test_csv['text_strings'])\n",
+    "\n",
+    "x_test = x_test.toarray()\n",
+    "x_test = np.array(x_test)\n",
+    "\n",
+    "y_test_model_predict = model_test.predict(x_test)\n",
+    "y_test_model_predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_csv = pd.read_csv(\"../en_project_csv/test.csv\")\n",
+    "sub_csv['target'] = y_test_model_predict\n",
+    "\n",
+    "final_sub = sub_csv[['id','target']]\n",
+    "final_sub.to_csv('final_submission.csv', index=False)"
    ]
   },
   {
