--- a/PROJECT/NLP_FinalProject.ipynb
+++ b/PROJECT/NLP_FinalProject.ipynb
@@ -731,6 +731,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         id  target\n",
+      "0         0       1\n",
+      "1         2       1\n",
+      "2         3       1\n",
+      "3         9       1\n",
+      "4        11       1\n",
+      "...     ...     ...\n",
+      "3258  10861       1\n",
+      "3259  10865       1\n",
+      "3260  10868       1\n",
+      "3261  10874       1\n",
+      "3262  10875       0\n",
+      "\n",
+      "[3263 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_sub)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
