--- a/PROJECT/NLP_FinalProject.ipynb
+++ b/PROJECT/NLP_FinalProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "from nltk.stem.porter import PorterStemmer\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score"
    ]
@@ -460,15 +461,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       [our, deed, reason, earthquak, may, allah, for...\n",
+      "1            [forest, fire, near, La, rong, sask, canada]\n",
+      "2       [all, resid, ask, shelter, place, notifi, offi...\n",
+      "3       [13000, peopl, receiv, wildfir, evacu, order, ...\n",
+      "4       [just, got, sent, photo, rubi, alaska, smoke, ...\n",
+      "                              ...                        \n",
+      "7608    [two, giant, crane, hold, bridg, collap, nearb...\n",
+      "7609    [ariaahrari, thetawniest, the, control, wild, ...\n",
+      "7610    [m194, 0104, utc5km, S, volcano, hawaii, httpt...\n",
+      "7611    [polic, investig, ebik, collid, car, littl, po...\n",
+      "7612    [the, latest, more, home, raze, northern, cali...\n",
+      "Name: text, Length: 7613, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "def stemming(text):\n",
     "    stem_text = [porter_stemmer.stem(word) for word in text]\n",
     "    return stem_text\n",
     "\n",
-    "train_csv['text'] = train_csv['text'].apply(lambda x: stemming(x))"
+    "train_csv['text'] = train_csv['text'].apply(lambda x: stemming(x))\n",
+    "print(train_csv['text'])"
    ]
   },
   {
@@ -592,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -601,14 +622,17 @@
        "(7613,)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "vectorizer = CountVectorizer()\n",
+    "tfidf_transformer = TfidfTransformer(smooth_idf=True)\n",
+    "\n",
     "X = vectorizer.fit_transform(train_csv['text_strings'])\n",
+    "X = tfidf_transformer.fit_transform(X)\n",
     "\n",
     "x_train = X.toarray()\n",
     "x_train = np.array(x_train)\n",
@@ -621,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -635,10 +659,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9630894522527256"
+       "0.8896624195455143"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,16 +677,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_csv  = pd.read_csv(\"../en_project_csv/test.csv\")\n",
     "test_csv.fillna('', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,22 +717,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, ..., 1, 1, 0], dtype=int64)"
+       "array([1, 1, 1, ..., 1, 1, 1], dtype=int64)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_test = vectorizer.transform(test_csv['text_strings'])\n",
+    "x_test = tfidf_transformer.fit_transform(x_test)\n",
     "\n",
     "x_test = x_test.toarray()\n",
     "x_test = np.array(x_test)\n",
@@ -718,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +775,7 @@
       "3259  10865       1\n",
       "3260  10868       1\n",
       "3261  10874       1\n",
-      "3262  10875       0\n",
+      "3262  10875       1\n",
       "\n",
       "[3263 rows x 2 columns]\n"
      ]
